# plotlyjs-extras

./: README.md  pyproject.toml
examples/: legend_highlight_demo.ipynb
plotlyjs_extras/: __init__.py  widget.py
scripts/: generate_readme_screenshots.py
tests/: test_notebooks.py
