[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotlyjs-extras"
version = "0.1.0"
description = "Better interactive Plotly figures for Jupyter notebooks: resizable containers, legend-highlight instead of hide, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "plotly>=5.0",
    "ipython>=7.0",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "nbclient", "playwright"]
